# smolclaw

./: .dockerignore  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  Kconfig  README.md  RELEASE_NOTES.md  todo.md
.github/workflows/: ci.yml  release.yml
cmake/: kconfig.cmake  musl-toolchain.cmake
config/: config.example.json
configs/: defconfig  defconfig.minimal
docs/: RELEASING.md  SECURITY.md
scripts/: build_musl_deps.sh  build_static_deps.sh  check_claude_md.sh  embed_workspace.sh  gen_version.sh  irc_smoke_test.py  kconfig_genconfig.py  test_matrix.sh  test_security.sh
src/: agent.c  agent.h  agent_internal.h  agent_session.c  agent_turn.c  analytics.c  analytics.h  audit.c  audit.h  backup.c  backup.h  bus.c  bus.h  config.c  config.h  constants.h  constants_app.h  constants_limits.h  constants_network.h  context.c  context.h  cost.c  cost.h  logger.c  logger.h  main.c  memory.c  memory.h  memory_index.c  memory_index.h  pairing.c  pairing.h  rate_limit.c  rate_limit.h  session.c  session.h  state.c  state.h  tee.c  tee.h  (+3 more)
src/channels/: base.c  base.h  cli.c  cli.h  discord.c  discord.h  irc.c  irc.h  manager.c  manager.h  slack.c  slack.h  telegram.c  telegram.h  web.c  web.h  x.c  x.h
src/cron/: service.c  service.h
src/heartbeat/: service.c  service.h
src/mcp/: bridge.c  bridge.h  client.c  client.h  server.c  server.h
src/providers/: claude.c  claude.h  factory.c  factory.h  http.c  http.h  provider_common.c  provider_common.h  types.h
src/tools/: background.c  background.h  code_graph.c  code_graph.h  context_tools.c  context_tools.h  cron.c  cron.h  delegate.c  delegate.h  deny_patterns.h  exec_common.c  exec_common.h  filesystem.c  filesystem.h  git.c  git.h  memory_search.c  memory_search.h  memory_tools.c  memory_tools.h  message.c  message.h  output_filter.c  output_filter.h  registry.c  registry.h  shell.c  shell.h  spawn.c  spawn.h  types.h  web.c  web.h  x_tools.c  x_tools.h
src/updater/: transport_http.c  transport_http.h  types.h  updater.c  updater.h
src/util/: base64.c  base64.h  curl_common.c  curl_common.h  json_helpers.c  json_helpers.h  prompt_guard.c  prompt_guard.h  sandbox.c  sandbox.h  secrets.c  secrets.h  sha256.c  sha256.h  sse.c  sse.h  str.c  str.h  uuid.c  uuid.h  vault.c  vault.h  websocket.c  websocket.h  x_api.c  x_api.h
src/voice/: transcriber.c  transcriber.h
tests/: mock_http.h  test_agent.c  test_analytics.c  test_background.c  test_code_graph.c  test_config.c  test_cron.c  test_curl_common.c  test_discord.c  test_e2e.c  test_heartbeat.c  test_irc.c  test_mcp.c  test_mcp_server.c  test_memory_search.c  test_memory_tools.c  test_output_filter.c  test_pairing.c  test_providers.c  test_sandbox.c  test_security_prod.c  test_session.c  test_sse.c  test_str.c  test_tee.c  test_telegram.c  test_tools.c  test_updater.c  test_vault.c  test_voice.c  test_web.c  test_x.c
workspace/: AGENTS.md  HEARTBEAT.md  SOUL.md
